# ai-newsletter-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  content-agent-brief.md  pyproject.toml  setup_schedule.ps1
scripts/: README.md  fix_email_via_api.py  retry_failed_emails.py
src/newsletter/: config.py  curator.py  db.py  emailer.py  generator.py  linkedin.py  main.py  models.py  web.py
src/newsletter/collectors/: base.py  bluesky.py  editor_picks.py  google_news.py  huggingface.py  reddit.py  rss.py  scraper.py
src/newsletter/templates/: dashboard.html  landing.html  newsletter.html  unsubscribe.html
