[project]
name = "ai-newsletter-agent"
version = "0.1.0"
description = "AI-powered weekly newsletter agent that aggregates, curates, and delivers AI news"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "googlenewsdecoder>=0.1.2",
    "praw>=7.7.1",
    "resend>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "atproto>=0.0.55",
]

[project.scripts]
newsletter = "newsletter.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter"]
