[project]
name = "ai-newsletter-agent"
version = "0.1.0"
description = "AI-powered weekly newsletter agent that aggregates, curates, and delivers AI news"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Inigo Esteban Marina" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "googlenewsdecoder>=0.1.2",
    "praw>=7.7.1",
    "resend>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "atproto>=0.0.55",
]

[project.scripts]
newsletter = "newsletter.main:cli"

[project.urls]
Homepage = "https://knowledgeinchain.com"
Repository = "https://github.com/iestebanmarina/ai-newsletter-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "E501",   # line-too-long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["newsletter"]
